fix alignment issues for episode page in safari?

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -861,11 +861,11 @@ and (max-width: 700px){
     .container{
         width:90vw;
     }
-
+    /*
     #episodesMain{
-        margin-left:-7vw;
+        /*margin-left:-7vw;
     }
-
+    */
     .inactiveDesc{
         margin-left:30px;
     }
